--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
         run: expo login -u ${{ secrets.EXPO_CLI_USERNAME }} -p ${{ secrets.EXPO_CLI_PASSWORD }}
 
       - name: Build Android APK
-        run: expo build:android --non-interactive
+        run: eas build -p android
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
