--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Login to Expo
         run: expo login -u ${{ secrets.EXPO_CLI_USERNAME }} -p ${{ secrets.EXPO_CLI_PASSWORD }}
 
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
+
       - name: Build Android APK
         run: eas build -p android
 
