Configure EAS project

--- a/app.json
+++ b/app.json
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.israa12.game"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "94d1d0a2-f437-4c25-afa7-5c139d92eaa4"
+      }
     }
   }
 }
