--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,8 @@ jobs:
         run: npm install -g eas-cli
 
       - name: Build Android APK
-        run: eas build -p android
+        run: eas build -p android --non-interactive
+
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
