--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install -g eas-cli
 
       - name: Build Android APK
-        run: eas build -p android --non-interactive
+        run: expo build:android --non-interactive
 
 
       - name: Upload Artifact
