--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,12 +24,11 @@ jobs:
       - name: Login to Expo
         run: expo login -u ${{ secrets.EXPO_CLI_USERNAME }} -p ${{ secrets.EXPO_CLI_PASSWORD }}
 
-      - name: Install EAS CLI
-        run: npm install -g eas-cli
+      - name: Install project dependencies
+        run: npm install
 
       - name: Build Android APK
-        run: eas build -p android
-
+        run: expo build:android --non-interactive --no-warnings
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
