--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: Build Android APK
-        run: expo build:android --non-interactive
+        run: eas build -p android 
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
