--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '14'
 
       - name: Install Expo CLI
-        run: npm install -g expo-cli
+        run: npm install --global expo-cli
 
       - name: Login to Expo
         run: expo login -u ${{ secrets.EXPO_CLI_USERNAME }} -p ${{ secrets.EXPO_CLI_PASSWORD }}
@@ -28,10 +28,10 @@ jobs:
         run: npm install
 
       - name: Build Android APK
-        run: eas build -p android 
+        run: npx eas build --platform android
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
           name: android-build
-          path: path/to/your/apk/*.apk
+          path: <path/to/your/apk/*.apk>
