--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '14'
 
       - name: Install Expo CLI
-        run: yarn global add eas-cli
+        run: npm install --global expo-cli
 
       - name: Login to Expo
         run: expo login -u ${{ secrets.EXPO_CLI_USERNAME }} -p ${{ secrets.EXPO_CLI_PASSWORD }}
