--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build Android APK
-        run: npx react-native run-android --variant=release
+        run: npx react-native run-android 
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
